# bead

./: .bumpversion.cfg  .coveragerc  .gitignore  .travis.yml  Makefile  Pipfile  README.md  TODO  __main__.py  add-git-info.sh  appveyor.yml  build.py  ci  noxfile.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test  test_requirements.txt  tox.ini  tracelog.py
.github/workflows/: ci-nox.yml  ci.yml  release-executables.yml
bead/: archive.py  bead.py  box.py  cli.py  exceptions.py  layouts.py  meta.py  repos.py  spec.py  test.py  test_archive.py  test_box.py  test_spec.py  test_workspace.py  workspace.py  ziparchive.py  zipopener.py
bead/cli/: __init__.py  arg_help.py  arg_metavar.py  cmdparse.py  common.py  fixtures.py  input.py  robot.py  test_develop_command.py  test_input_commands.py  test_nuke_command.py  test_repo_commands.py  test_save_command.py  test_status_command.py  workspace.py
bead/commands/: arg_help.py  common.py  input.py  repo.py  workspace.py
bead/pkg/: archive.py  bead.py  layouts.py  meta.py  package.py  spec.py  test_archive.py  test_workspace.py  workspace.py
bead/tech/: __init__.py  fs.py  identifier.py  persistence.py  securehash.py  test_fs.py  test_persistence.py  test_securehash.py  test_timestamp.py  timestamp.py
bead/test_cli/: fixtures.py  test_develop_command.py  test_input_commands.py  test_new_command.py  test_nuke_command.py  test_repo_commands.py  test_save_command.py  test_status_command.py
bead_cli/: __init__.py  arg_help.py  arg_metavar.py  box.py  cmdparse.py  common.py  environment.py  fixtures.py  git_info.py  input.py  main.py  repo.py  test_basic_usage.py  test_box_commands.py  test_develop_command.py  test_feature_update_by_name.py  test_fixtures.py  test_input_commands.py  test_new_command.py  test_nuke_command.py  test_repo_commands.py  test_robot.py  test_save_command.py  test_status_command.py  test_web.py  test_web_command.py  test_xmeta.py  test_zap_command.py  web.py  workspace.py
bead_cli/web/: bead_state.py  cluster.py  commands.py  csv.py  dummy.py  freshness.py  graph.py  graphviz.py  io.py  metabead.py  rewire.py  sketch.py  sketchbead.py  test_fixture.py  test_web.py  web.py
doc/: concepts.md  datapackage-design.md  design-decisions.txt  implementation-plan.txt  overview.md  quickstart.md  repo-layout.txt  usecases.md  usecases2.md
lib/: __init__.py  channels.py  cli.py  config.py  config_test.py  create.py  db.py  extract.py  identifier.py  meta.py  path.py  path_test.py  persistence.py  persistence_test.py  pkg_layout.py  pkg_zip.py  repos.py  securehash.py  securehash_test.py  test.py  test_cli.py  test_fixture_robot.py  test_translations.py  timestamp.py  translations.py  translations_test.py  verify.py
lib/commands/: __init__.py  arg_help.py  cmdparse.py  common.py  dict.py  help.py  input.py  (+3 more)
tests/: arglinker.py  sketcher.py  test_arglinker.py  test_main_error_handling.py  test_unhandled_error_report.py  toy_beads.py
(+56 files in other folders)
