[metadata]
name = bead
version = 0.0.1
author = Krisztián Fekete
author-email = e3krisztian@gmail.com
summary = package manager for packages consisting of (data, code to produce data)
description-file = README.md
home-page = https://github.com/e3krisztian/bead
requires-python = >=2.7
classifier =
    Development Status :: 1 - Planning
    Environment :: Console
    License :: Public Domain

[files]
packages =
    bead
    bead_cli

[entry_points]
console_scripts =
    bead = bead_cli:main

[flake8]
# Disable pep8 "W503 line break before binary operator" (since pep8 1.6.2)
ignore = W503
