[metadata]
name = bead
version = 0.0.3
author = Krisztián Fekete
author-email = e3krisztian@gmail.com
summary = package manager for packages consisting of (data, code to produce data)
description-file = README.md
home-page = https://github.com/e3krisztian/bead
requires-python = >=2.7
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: Public Domain

[files]
packages =
    bead
    bead_cli
modules =
    tracelog

[entry_points]
console_scripts =
    bead = bead_cli.main:main

# [flake8] - see tox.ini
